--- a/thesis/1bb-EDA-sst.Rmd
+++ b/thesis/1bb-EDA-sst.Rmd
@@ -1,16 +1,13 @@
----
-output:
-  html_document: default
-  pdf_document: default
----
 ## EDA SST
 
-We explore the **sea surface temperature data** set, used in the paper by Ciemer et al (@ciemer2020early). 
-ERSST (Extended Reconstructed Sea Surface Temperature, @huang2017noaa) is a reanalysis from observed data given in the International Comprehensive Ocean-Athmosphere Data Set (ICOADS). Which contains observations **from 1800/01 until 2016/12**, made by ships and buoys for example.
-The data comes on a **2x2 degree grid**, where data was missing **interpolation techniques were used**.
+We explore the sea surface temperature data set, used in the paper by Ciemer et al (@ciemer2020early). 
+ERSST (Extended Reconstructed Sea Surface Temperature, @huang2017noaa) is a reanalysis from observed data given in the International Comprehensive Ocean-Athmosphere Data Set (ICOADS). Which contains observations *from 1800 until 2016*, made by ships and buoys for example.
+The data comes on a 2x2 degree grid, where data was missing interpolation techniques were used.
 See paper for reference.
-the file contains **two variables** that are measured across different dimensions.
-The two variables contain the **sea surface temperatures and the respective SST anomalies** (with respect to the 1971-2000 monthly climatology).
+the file contains two variables that are measured across different dimensions.
+The two variables contain the sea surface temperatures and the respective SST anomalies (with respect to the 1971-2000 monthly climatology). Here we analyze the raw SST values, since the anomalies
+are computed to a climatology that spans a time frame we will use
+in the analysis. Using the anomalies therefore would eventually introduce information leakage because during the training process future values were used for fitting the model.
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning = FALSE, message = FALSE)
@@ -31,54 +28,59 @@ source("../code/R/helper-functions.R")
 ```
 
 ```{r}
-(sst_dens_plot <- readRDS("../results/eda/sst_dens_plot.rds"))
-```
-
-### Mean at each location
-```{r}
-(sst_means_loc_plot <- readRDS("../results/eda/sst_means_loc_plot.rds"))
+sst_dens_plot <- readRDS("../results/eda/sst_dens_plot.rds")
+sst_dens_plot <- sst_dens_plot + ggtitle("Density of raw SST values") +
+  ylab("Density") + xlab("SST")
+sst_dens_plot
 ```
 
 ```{r}
+sst_means_loc_plot <- readRDS("../results/eda/sst_means_loc_plot.rds")
+sst_means_loc_plot <- sst_means_loc_plot + ggtitle(NULL)
+sst_means_loc_plot$labels$fill <- "Mean"
+sst_means_loc_plot <- sst_means_loc_plot + scale_fill_gradient2(low = "blue", high = "red", midpoint=mean(sst_means_loc_plot$data$val, na.rm=TRUE))
+```
+
+```{r, eval = FALSE}
 (sst_mean_dens_plot <- readRDS("../results/eda/sst_means_dens_plot.rds"))
 ```
 
 
-### SD at each location
 ```{r, fig.cap="SST standard deviation at each location. The standard deviation was computed over the whole time period"}
-(sst_sds_loc_plot <- readRDS("../results/eda/sst_sds_loc_plot.rds"))
+sst_sds_loc_plot <- readRDS("../results/eda/sst_sds_loc_plot.rds")
+#sst_sds_loc_plot$labels$fill <- "SD"
+# sst_sds_loc_plot <- sst_sds_loc_plot + scale_fill_gradient2(low = "blue", high = "red", midpoint=mean(sst_sds_loc_plot$data$val, na.rm=TRUE))
 ```
 
-```{r, fig.cap="Density of standard deviations, standard deviations were computed for each location over the whole time period"}
+```{r, eval = FALSE, fig.cap="Density of standard deviations, standard deviations were computed for each location over the whole time period"}
 (sst_sds_dens_plot <- readRDS("../results/eda/sst_sds_dens_plot.rds"))
 ```
 
-### Mean and SD at each location
 
 ```{r mean-and-sd-sst-og, fig.cap="Mean and SD on the spatial map."}
-sst_means_loc_plot + (sst_sds_loc_plot + ggtitle("SD of sst at each location"))
+sst_means_loc_plot + sst_sds_loc_plot +
+  plot_annotation("Global SST mean and SD at each location")
 ```
 
-```{r}
+```{r, eval = FALSE}
 (sst_mean_dens_plot + ggtitle("Density of means")) + (sst_sds_dens_plot + ggtitle("Density of sd"))
 ```
 
 
-### Trend at each location
 
-```{r, include=FALSE}
+```{r, eval = FALSE, include=FALSE}
 a <- readRDS("../results/eda/sst_trends_loc_lm_plot.rds")
 b <- readRDS("../results/eda/sst_trends_loc_stl_plot.rds")
 a + b
 ```
 
-```{r}
+```{r, eval = FALSE}
 (sst_trends_loc_stl_plot <- readRDS("../results/eda/sst_trends_loc_stl_plot.rds"))
 ```
-### Means per month TEST
 
 ```{r}
 (sst_mean_arrange <- readRDS("../results/eda/sst_mean_arrange.rds"))
+sst_mean_arrange
 ```
 We see spatial patterns of the mean evolving over time.
 For example: From May until August there is a spatial separation in
@@ -92,7 +94,6 @@ As expected there is a large seasonal component regarding the means.
 #### Open: summarise CAB for each month (mean Jan, Feb, etc.)
 ```
 
-### SD per month TEST
 
 ```{r}
 (sst_sd_arrange <- readRDS("../results/eda/sst_sd_arrange.rds"))
@@ -101,9 +102,8 @@ As expected there is a large seasonal component regarding the means.
 For the standard deviation we see as well large differences in values 
 during different months of the year.
 
-### Trend per month TEST
 
-```{r}
+```{r, eval = FALSE}
 (sst_trend_arrange <- readRDS("../results/eda/sst_trend_arrange.rds"))
 ```
 
