--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -131,3 +131,23 @@ urldate = {20-04-21}
   year={2012},
   publisher={Wiley Online Library}
 }
+
+@Article{glmnet-package,
+    title = {Regularization Paths for Generalized Linear Models via
+      Coordinate Descent},
+    author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2010},
+    volume = {33},
+    number = {1},
+    pages = {1--22},
+    url = {https://www.jstatsoft.org/v33/i01/},
+    doi = {10.18637/jss.v033.i01},
+  }
+  
+@book{van2007prediction,
+  title={Prediction accuracy and stability of regression with optimal scaling transformations},
+  author={Van der Kooij, Anita J},
+  year={2007},
+  publisher={Leiden University}
+}
