progress methods-fused-lasso

--- a/thesis/5t-method-fused-lasso.Rmd
+++ b/thesis/5t-method-fused-lasso.Rmd
@@ -1,7 +1,14 @@
-# Fused Lasso Regression
-
-## The fused lasso
-
+# The fused lasso
+## General
+```{r}
+# TODO
+# Intro name and motivation fused lasso
+# friedmann introduced name
+# hastie combination lasso and fusion therefore fused lasso
+# we use implementation from genlasso package 
+# then we describe the formula as given in the package description
+# omptimization as in paper
+```
 ```{r}
 # TODO add statistical learning with sparsity to references.
 ```
@@ -9,14 +16,6 @@
 # TODO add to summary of LASSO defaults, that characteristic 
 # of LASSO
 ```
-
-
-As expected and seen in the results, the different LASSO models choose single
-SST regions as predictors as opposed to whole regions.
-Since the LASSO only regularizes the magnitude of coefficients
-but ignores the their ordering. 
-We therefore use the so-called *fused lasso* as implemented in the *genlasso* package and the respective *fusedlasso* function (\@ref{genlassopackage}, \@ref{thibshirani2005sparsity}).
-
 ```{r}
 # TODO make reference to achieved results here
 ```
@@ -34,20 +33,6 @@ We therefore use the so-called *fused lasso* as implemented in the *genlasso* pa
 ```{r}
 # TODO add graphic of fig.2 fused lasso
 ```
-
-The fused LASSO solves the problem:
-
-$$\min_{\beta} 1/2 \sum_{i=1}^n(y_i - x_i^T\beta_i)^2 + \lambda \sum_{i,j \in E} |\beta_i - \beta_j| + \gamma \cdot \lambda \sum_{i=1}^p|\beta_i|  ,$$
-with $x_i$ being the ith row of the predictor matrix and 
-E is the edge set of an underlying graph.
-Regularizing $|\beta_i-\beta_j|$, penalizes large differences in
-close coefficients. In our case "close" means small distances
-as defined on 2-dimensional longitude/latitude grid. This grid defines a graph that can be used to compute the differences for
-each location.
-The third term $\gamma \cdot \lambda \sum_{i=1}^p|\beta_i|$,
-controls the sparsity of the coefficients. $\gamma=0$ leads to complete fusion of the coefficients (no sparsity) and $\gamma$ > 0 introduces sparsity to the solution, with higher values placing more priority on sparsity. 
-$\hat{\beta}$ is computed as a function of $\lambda$, with fixed $\gamma$.
-
 
 ```{r}
 #TODO note the fused lasso paper here are
@@ -67,96 +52,138 @@ $\hat{\beta}$ is computed as a function of $\lambda$, with fixed $\gamma$.
 # Algorithm
 ```
 
+As expected and seen in the results, the different LASSO models choose single
+SST regions as predictors as opposed to whole regions.
+Since the LASSO only regularizes the magnitude of coefficients
+but ignores their ordering.  
+We therefore use the so-called *fused lasso* as implemented in the *genlasso* package and the respective *fusedlasso* function. (@tibshirani2005sparsity, @genlassopackage)
+The fused lasso is a generalization of the lasso for problems with features
+that can be ordered in a meaningful way. It penalizes not only the coefficients'
+$L_1$-norm but also their differences given their ordering, introducing sparsity
+in both of them @tibshirani2005sparsity.
+In our case the fused lasso thus penalizes the differences of SST coefficients
+that are close to each other.
+
+The fused LASSO as implemented in *genlasso* package solves the problem:
+
+<!-- $$\min_{\beta} 1/2 \sum_{i=1}^n(y_i - x_i^T\beta_i)^2 + \lambda \sum_{i,j \in E} |\beta_i - \beta_j| + \gamma \cdot \lambda \sum_{i=1}^p|\beta_i|  ,$$ -->
+\begin{equation}
+\min_{\beta} 1/2 \sum_{i=1}^n(y_i - x_i^T\beta_i)^2 + \lambda \sum_{i,j \in E} |\beta_i - \beta_j| + \gamma \cdot \lambda \sum_{i=1}^p|\beta_i|,
+(\#eq:fused-lasso)
+\end{equation}
+
+
+with $x_i$ being the ith row of the predictor matrix and 
+E is the edge set of an underlying graph.
+Regularizing $|\beta_i-\beta_j|$, penalizes large differences in
+close coefficients. In our case "close" means small distances
+as defined on 2-dimensional longitude/latitude grid. This grid defines a graph that can be used to compute the distances for
+each location.
+The third term $\gamma \cdot \lambda \sum_{i=1}^p|\beta_i|$,
+controls the sparsity of the coefficients. $\gamma=0$ leads to complete fusion of the coefficients (no sparsity) and $\gamma$ > 0 introduces sparsity to the solution, with higher values placing more priority on sparsity. 
+$\hat{\beta}$ is computed as a function of $\lambda$, with fixed $\gamma$.
+
+
+### Implementation
+The summary of the algorithm is taken from the paper proposing
+the implementation, @arnold2016efficient and the original paper introducing 
+the algorithm @tibshirani2011solution.
 In the fused lasso setting the coefficients $\beta \in \mathbb{R}^p$ can be thought of
 as nodes of a given undirected Graph $G$, with edge set $E \subset {1,...,p}^2$.
 Now lets assume that $E$ has $m$ edges which are enumerated $e_1,...,e_m$.
 The fused lasso penalty matrix $D$ is then $m \times p$, where 
 each row corresponds to an edge in $E$.
-So when $e_l = (i,j)$, we write $l_th$ row of $D$ as 
+So when $e_l = (i,j)$, we write $l_{th}$ row of $D$ as 
 
-$$ D_l = (0,...-1,...1,...) \in \mathbb{R}^p, $$
-meaning $D_l$ has all zeros except for the the $i_th$ and $j_th$
+<!-- $$ D_l = (0,...-1,...1,...) \in \mathbb{R}^p, $$ -->
+\begin{equation}
+D_l = (0,...,-1,...,1,...) \in \mathbb{R}^p,
+(\#eq:pen-mat)
+\end{equation}
+
+meaning $D_l$ has all zeros except for the the $i_{th}$ and $j_{th}$
 location.
 
+\@ref(eq:fused-lasso) is solved by a dual path algorithm that was proposed
+by @arnold2016efficient for different use cases of the (sparse) fused lasso.
+They describe the dual path algorithm based on the notation of the generalized
+lasso problem @tibshirani2011solution:
+
+\begin{equation}
+\hat{\beta}=\underset{\beta \in \mathbb{R}^{p}}{\arg \min } \frac{1}{2}\|y-X \beta\|_{2}^{2}+\lambda\|D \beta\|_{1},
+(\#eq:gen-lasso)
+\end{equation}
+
+where $y \in \mathbb{R}^n$ is the vector of the outcome, 
+$X \in \mathbb{R}^{n \times p}$ a predictor matrix, $D \in \mathbb{R}^{m \times p}$
+denotes a penalty matrix, and $\lambda \geq 0$ is a regularization parameter.
+The dual path algorithm solves not the primal but the dual solution of the problem
+and computes the solution for a whole path instead of single values of $\lambda$.
+Hence the "dual" and "path" that make up the name.
+@arnold2016efficient argue that the strength of the original algorithm 
+@tibshirani2011solution lays in the fact that it applies to a unified framework
+in which $D$ can be a general penalty matrix.
+Let's consider the case when $X=I$ and $rank(X)=p$ (this is called the "signal approximator" case),
+the dual problem of \@ref(eq:gen-lasso) is then:
+
+\begin{equation}
+\hat{u} \in \underset{\substack{u \in \mathbb{R}^{\omega}}}{\arg \min } \frac{1}{2}\left\|y-D^{T} u\right\|_{\frac{2}{2}} \text { subject to }\|u\|_{\infty} \leq \lambda.
+(\#eq:dual)
+\end{equation}
+
+The primal and dual solutions, $\hat{\beta}$ and $\hat{u}$ are related by:
+
+\begin{equation}
+\hat{\beta}=y-D^{T} \hat{u} .
+(\#eq:dual-relate)
+\end{equation}
+
+While the primal solution is unique, this does not need to be the case 
+for dual solution (note the element notation in \@ref(eq:dual).
+The dual path algorithm starts at $\lambda = \infty$ and computes the
+path until $\lambda = 0$.
+Conceptually the algorithm keeps track of the coordinates of the dual
+solutions it computed for each lambda $\hat{u}(\lambda)$.
+The solutions are equal to $\pm\lambda$, meaning they lie on the boundary
+of the region $[-\lambda,\lambda]$. Along the path it computes
+the critical values of $\lambda$, $\lambda_1 \geq \lambda_2,...,$ 
+at which the coordinates of these solutions hit or leave the boundary.
+
+There are two algorithms described in the paper and the various specialized implementations
+that can increase efficiency depending on the use cases.
+This depends on $X$, and/or the special structure of $D$.
+Algorithm 1 handles the $X=I$ case and Algorithm 2 the general $X$ case.
+As we introduced the dual in \@ref(eq:dual), it assumed $X=I$, which is not satisfied 
+in our case.
+For the general $X$ case the problem formulation can be rewritten so that the
+formula only changes $D$ and $y$ to $\tilde{D}$ and $\tilde{y}$ and then the same Algorithm can be applied. $\tilde{D}=DX^+$ and $\tilde{y}=XX^+y$, where $X^x$ is the 
+Moore-Penrose pseudoinverse of $X \in \mathbb{R}^{n \times p}$.
+Algorithm 2 therefore transforms $X$ and $y$ in a certain way and then applies Algorithm 1
+to the transformed problem.
+Its also easy to see that in our case $p > n$ and $X$ is column rank deficient.
+They solve this by adding a small fixed $l_2 $penalty to the original problem,which 
+leads to:
+
+
+\begin{equation}
+\operatorname{minimize}_{\beta \in \mathbb{R}^{p}} \frac{1}{2}\|y-X \beta\|_{2}^{2}+\lambda\|D \beta\|_{1}+\varepsilon\|\beta\|_{2}^{2},
+(\#eq:add-ridge)
+\end{equation}
+
+and this is the same as
+
+\begin{equation}
+\underset{\beta}{\operatorname{minimize}} \frac{1}{2}\left\|y^{*}-\left(X^{*}\right) \beta\right\|_{2}^{2}+\lambda\|D \beta\|_{1},
+(\#eq:add-ridge2)
+\end{equation}
+
+with $y^{*}=(y, 0)^{T}$ and $X^{*}=\left[\begin{array}{c}x \\ \varepsilon \cdot I\end{array}\right]$. Because $\operatorname{rank}\left(X^{*}\right)=p$,
+again it is possible to apply one of the algorithms.
 
 
 
-# quick summary what I got so far from the algorithm
-1.2 case X=I.
-very general dual path algorithm
-then the use general X, here they compute moore-penrose pseudoinverse
-and substitute Xtilde and ytilde
-Also when p>n X does not have full column rank they add a diagonal matrix
-to the rows, with eps time beta magnitude on the diagonals (see github)
-
-implementation: do not solve least square problems all the time,
-but use QR decomposition in the beginning and then later 
-update the QR decomposition.
-in some cases more meaningful to take advantage of special structures of D. In our case they use Laplacian linear systems
-
-QR-based general X
-computing D tilde = DX+ destroy special structures in D,
-need other methods see Section 5
-NOTE: total number of steps are not understood really
-they use direct solvers because past decisions influence future outcome
-
-2. QR-based general D
-QR in appendix but role of m and n are changed.
-two strategies: wide and tall
-our case tall strategy
-DPG=QR, rotated QR decomposition
-
-4. Special implementation for fused lasso, X=I
-computing DDT are highly sparse but. are underdetermined
-because m larger than n, more edges than nodes.
-We can find arbitrary solution (we will called it basic solution)
-and from arbitrary solution we can find solution with minimum l2 norm.
-4.1 There is not necesserily a computional improvement but for
-special cases as for example fused lasso there are improvements
-because of special structure in D.
-they compute projection onto the null and basic solutions of linear systems, then from basic solution, optimal solution.
-
-
-# what to they actually use now
-
-
-They change algorithm 2 becaus using xtild and stuff because are options are needed when D has structure using xtilde will destroy special structure in D.
-So when X general we use xtilde but using xtilde will destroy structure in D, therefore when X general AND D has structure use following:
-
-
-### argumentation
-They use gen lasso framework for writing it down
-related work, dual in general problem, primal did not solve that
-dual is not distinct
-all lambdas therefore path algorithm
-write down algorithm to solve
-for alg 2 general x use d tilde and x tilde
-if x is rank defficient add ridge penalty (see formula in og paper)
-if x is identity they use qr instead of linear system solvers
-they are direct and can be cleverly updated
-use direct solvers because decisions fom past influence future decisions
-if D has special structure they propose special implementations
-for fused lasso problem this means that sparse matrices have to 
-be solved. arbitrary solutions finding easy min l2 norm is harder,in general.
-they show how to compute l2 norm solutions from arbitrary solution.
-Using the special structure for (sparse) fused lasso problem
-of D, computing projections onto null and solving laplacian
-systems. because if D penalty matrix of undirected graph
-DTD is laplacian.
-
-
-show alg in general
-sho alg for general x
-  explain what to do when rank defficient
-but then use specialized implementation
-  explain DTD is sparse but solution has to be found 
-    with little trick
-  DTD is laplacian system and can be solved by cholesky.
 
 
 
-
-
-
-
-
+ 
+# References 
