--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -151,3 +151,26 @@ urldate = {20-04-21}
   year={2007},
   publisher={Leiden University}
 }
+
+@article{arnold2016efficient,
+  title={Efficient implementations of the generalized lasso dual path algorithm},
+  author={Arnold, Taylor B and Tibshirani, Ryan J},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={25},
+  number={1},
+  pages={1--27},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{tibshirani2011solution,
+  title={The solution path of the generalized lasso},
+  author={Tibshirani, Ryan J and Taylor, Jonathan},
+  journal={The annals of statistics},
+  volume={39},
+  number={3},
+  pages={1335--1371},
+  year={2011},
+  publisher={Institute of Mathematical Statistics}
+}
+
