--- a/thesis/5t-method-fused-lasso.Rmd
+++ b/thesis/5t-method-fused-lasso.Rmd
@@ -179,9 +179,31 @@ and this is the same as
 
 with $y^{*}=(y, 0)^{T}$ and $X^{*}=\left[\begin{array}{c}x \\ \varepsilon \cdot I\end{array}\right]$. Because $\operatorname{rank}\left(X^{*}\right)=p$,
 again it is possible to apply one of the algorithms.
+Instead of solving linear systems in each, we can apply a QR decomposition
+that can be updated in a neat way to avoid solving the complete 
+linear system in each step. See the appendix of @arnold2016efficient, for details.
+Special care has to be taken though for general X and certain $D$.
+"Blindly" applying the algorithms then would lead to a large drop in relative
+efficiency.
+Since $\tilde{D}= DX^+$ destroys the special structures that are present 
+in the penalty matrix special implementations are constructed as well for our case
+with general $X$ and $D$ coming from the sparse fused lasso.
 
-
-
+It can be shown that the computational costly steps in the algorithm reduce
+to solving linear systems of the form $DD^T = Dc$.
+When $D$ is the oriented incidence matrix of a graph, $D$ will be sparse
+but can also be rank deficient when the graph has more edges than nodes, 
+hence $m > p$. 
+It can be shown that for sparse undetermined systems it is possible
+to find an arbitrary solution (here called the *basic* solution), but computing the solution with minimum $l_2$
+norm is a lot more difficult in general.
+It is possible though to derive the minimum $l_2$ norm solution from
+the basic solution.
+In the case of penalty matrices that come from a graph the structure of $D$
+can be used to improve efficiency when 
+When $D$ is the incidence matrix of a graph, then $D^TD$ is the Laplacian matrix of G.
+The Laplacian linear systems are then solved using a sparse Cholesky decomposition.
+For further details of the steps used in our case refer to Section 4 and in @arnold2016efficient.
 
 
 
